--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "@angular/platform-browser": "^17.0.5",
         "@angular/platform-browser-dynamic": "^17.0.5",
         "@angular/router": "^17.0.5",
+        "@fortawesome/fontawesome-free": "^6.5.2",
         "@fullcalendar/angular": "^6.0.3",
         "@fullcalendar/core": "^6.0.3",
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
+        "angular-font-awesome": "^3.1.2",
         "chart.js": "^3.3.2",
+        "ngx-spinner": "^17.0.0",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
